[tool.poetry]
name = "computils"
version = "0.1.1"
description = ""
authors = ["Jacob Valdez <jacob.valdez@limboid.ai>"]
license = "MIT"
readme = "README"
packages = [{ include = "computils" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
